--- a/style/page-top.css
+++ b/style/page-top.css
@@ -1,8 +1,5 @@
 .main-header{
 	background: url("../images/head-image.png") no-repeat!important;
-	-webkit-background-size: 100% auto !important;
-	-moz-background-size: 100% auto !important;
-	-o-background-size: 100% auto !important;
-	 background-size: 100% auto !important;
-	 height:918px;
+    background-size: 100% auto !important;
+    height:47.9vw;
 }
